{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 770,
  "lineage": "bf3056e0-7771-d421-5998-f6785f538910",
  "resources": [
    {
      "module": "module.BOT-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_BOT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046ffe88ccc99b39a",
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:instance/i-0cb180c564795808e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Ec2RoleForSSMAndCloudWatch",
            "id": "i-0cb180c564795808e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.large",
            "ipv6_address_count": 0,
            "key_name": "jiffybot_saas_15",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02037553b0457afa6",
            "private_dns": "ip-10-15-3-188.ap-southeast-1.compute.internal",
            "private_ip": "10.15.3.188",
            "public_dns": "ec2-54-251-86-67.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.86.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 150,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:339876445741:key/a565815f-51d7-4545-85ee-1ab4563c1b08",
                "throughput": 0,
                "volume_id": "vol-086cb38a6e205a620",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02383d91283267b9c",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-ec2-apsoutheast1a-bot",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-ec2-apsoutheast1a-bot",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006c81caae3a5c8fc"
            ]
          },
          "dependencies": [
            "module.BOT-instance.data.aws_ami.BOT",
            "module.BOT-instance.data.aws_availability_zones.available",
            "module.security_group.aws_security_group.botsg",
            "module.security_group.aws_security_group.core",
            "module.security_group.aws_security_group.efssg",
            "module.security_group.aws_security_group.lb",
            "module.security_group.aws_security_group.mlsg",
            "module.security_group.aws_security_group.mongodbsg",
            "module.security_group.aws_security_group.rds",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.DB-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2a49478e8fa80af",
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:instance/i-05ae63b12946db57e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Ec2RoleForSSMAndCloudWatch",
            "id": "i-05ae63b12946db57e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.large",
            "ipv6_address_count": 0,
            "key_name": "jiffymongo_saas_15",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ebe355fbd8f9e232",
            "private_dns": "ip-10-15-1-117.ap-southeast-1.compute.internal",
            "private_ip": "10.15.1.117",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 150,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:339876445741:key/a565815f-51d7-4545-85ee-1ab4563c1b08",
                "throughput": 0,
                "volume_id": "vol-03242dac340a191b7",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03edab75e14e97111",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-ec2-apsoutheast1a-db",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-ec2-apsoutheast1a-db",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e959957627daf5f5"
            ]
          },
          "dependencies": [
            "aws_route53_record.efs_dns",
            "module.DB-instance.data.aws_ami.db",
            "module.DB-instance.data.aws_availability_zones.available",
            "module.DB-instance.data.template_file.init",
            "module.security_group.aws_security_group.botsg",
            "module.security_group.aws_security_group.core",
            "module.security_group.aws_security_group.efssg",
            "module.security_group.aws_security_group.lb",
            "module.security_group.aws_security_group.mlsg",
            "module.security_group.aws_security_group.mongodbsg",
            "module.security_group.aws_security_group.rds",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:loadbalancer/app/saas-15-apsoutheast1-alb/66d49dc89f9f86ee",
            "arn_suffix": "app/saas-15-apsoutheast1-alb/66d49dc89f9f86ee",
            "dns_name": "saas-15-apsoutheast1-alb-800029727.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:loadbalancer/app/saas-15-apsoutheast1-alb/66d49dc89f9f86ee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "saas-15-apsoutheast1-alb",
            "security_groups": [
              "sg-0d9e0d211118716d2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02383d91283267b9c"
              },
              {
                "subnet_id": "subnet-0e7a95002ab708158"
              }
            ],
            "subnets": [
              "subnet-02383d91283267b9c",
              "subnet-0e7a95002ab708158"
            ],
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "saas-15-apsoutheast1-LB",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "saas-15-apsoutheast1-LB",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc_id": "vpc-0350853148b01d3c1",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.security_group.aws_security_group.botsg",
            "module.security_group.aws_security_group.core",
            "module.security_group.aws_security_group.efssg",
            "module.security_group.aws_security_group.lb",
            "module.security_group.aws_security_group.mlsg",
            "module.security_group.aws_security_group.mongodbsg",
            "module.security_group.aws_security_group.rds",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:listener/app/saas-15-apsoutheast1-alb/66d49dc89f9f86ee/d4acca3cf10a1839",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:339876445741:certificate/0b5d7670-c4eb-459e-be31-7de18d911222",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:targetgroup/saas-15-TG/c470f1691274ecea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:listener/app/saas-15-apsoutheast1-alb/66d49dc89f9f86ee/d4acca3cf10a1839",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:loadbalancer/app/saas-15-apsoutheast1-alb/66d49dc89f9f86ee",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2015-05",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_module.aws_acm_certificate.cert",
            "module.alb_module.aws_lb.public",
            "module.alb_module.aws_lb_target_group.tg_https",
            "module.security_group.aws_security_group.botsg",
            "module.security_group.aws_security_group.core",
            "module.security_group.aws_security_group.efssg",
            "module.security_group.aws_security_group.lb",
            "module.security_group.aws_security_group.mlsg",
            "module.security_group.aws_security_group.mongodbsg",
            "module.security_group.aws_security_group.rds",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:targetgroup/saas-15-TG/c470f1691274ecea",
            "arn_suffix": "targetgroup/saas-15-TG/c470f1691274ecea",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:targetgroup/saas-15-TG/c470f1691274ecea",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "saas-15-TG",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tga_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:targetgroup/saas-15-TG/c470f1691274ecea-20210809141750834100000001",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339876445741:targetgroup/saas-15-TG/c470f1691274ecea",
            "target_id": "i-07402595ed4fc4e7c"
          },
          "dependencies": [
            "aws_route53_record.efs_dns",
            "module.alb_module.aws_lb_target_group.tg_https",
            "module.core-instance.aws_instance.ec2_core",
            "module.core-instance.data.aws_ami.Core",
            "module.core-instance.data.aws_availability_zones.available",
            "module.security_group.aws_security_group.botsg",
            "module.security_group.aws_security_group.core",
            "module.security_group.aws_security_group.efssg",
            "module.security_group.aws_security_group.lb",
            "module.security_group.aws_security_group.mlsg",
            "module.security_group.aws_security_group.mongodbsg",
            "module.security_group.aws_security_group.rds",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.core-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac10b3a7d1d0cc51",
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:instance/i-0554385b25a99c0b1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Ec2RoleForSSMAndCloudWatch",
            "id": "i-0554385b25a99c0b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "jiffycore_saas_15",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f29101e8de617e07",
            "private_dns": "ip-10-15-1-28.ap-southeast-1.compute.internal",
            "private_ip": "10.15.1.28",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:339876445741:key/a565815f-51d7-4545-85ee-1ab4563c1b08",
                "throughput": 0,
                "volume_id": "vol-06e06b5807fcef6b5",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03edab75e14e97111",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-ec2-apsoutheast1a-core",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-ec2-apsoutheast1a-core",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e77e308aa370945e"
            ]
          },
          "dependencies": [
            "aws_route53_record.efs_dns",
            "module.core-instance.data.aws_ami.Core",
            "module.core-instance.data.aws_availability_zones.available",
            "module.core-instance.data.template_file.init",
            "module.security_group.aws_security_group.botsg",
            "module.security_group.aws_security_group.core",
            "module.security_group.aws_security_group.efssg",
            "module.security_group.aws_security_group.lb",
            "module.security_group.aws_security_group.mlsg",
            "module.security_group.aws_security_group.mongodbsg",
            "module.security_group.aws_security_group.rds",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ml-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_ml",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b32242ea76ccddc9",
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:instance/i-08b0f6c31d116bc74",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Ec2RoleForSSMAndCloudWatch",
            "id": "i-08b0f6c31d116bc74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "jiffyml_saas_15",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05135f00f2993a5b1",
            "private_dns": "ip-10-15-1-238.ap-southeast-1.compute.internal",
            "private_ip": "10.15.1.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 150,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:339876445741:key/a565815f-51d7-4545-85ee-1ab4563c1b08",
                "throughput": 0,
                "volume_id": "vol-0b0238faa482f2b24",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03edab75e14e97111",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-ec2-apsoutheast1a-ml",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-ec2-apsoutheast1a-ml",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bcb9a90e2ffd8c4e"
            ]
          },
          "dependencies": [
            "aws_route53_record.efs_dns",
            "data.aws_route53_zone.selected",
            "module.ml-instance.data.aws_ami.ml",
            "module.ml-instance.data.aws_availability_zones.available",
            "module.security_group.aws_security_group.botsg",
            "module.security_group.aws_security_group.core",
            "module.security_group.aws_security_group.efssg",
            "module.security_group.aws_security_group.lb",
            "module.security_group.aws_security_group.mlsg",
            "module.security_group.aws_security_group.mongodbsg",
            "module.security_group.aws_security_group.rds",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "botsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:security-group/sg-006c81caae3a5c8fc",
            "description": "BOT-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006c81caae3a5c8fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Jiffy-automate-saas-15-SG-apsoutheast1-BOT",
            "name_prefix": "",
            "owner_id": "339876445741",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:security-group/sg-0e77e308aa370945e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e77e308aa370945e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.15.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.15.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9e0d211118716d2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Jiffy-automate-saas-15-SG-apsoutheast1-Core",
            "name_prefix": "",
            "owner_id": "339876445741",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.lb",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "current",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:security-group/sg-0ea8b7352d0bcc5fc",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea8b7352d0bcc5fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "43.254.43.186/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jiffy-SG",
            "name_prefix": "",
            "owner_id": "339876445741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-SG-apsoutheast1-custom-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-SG-apsoutheast1-custom-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "timeouts": null,
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efssg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:security-group/sg-0895ddf54d6732f04",
            "description": "EFS-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0895ddf54d6732f04",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.15.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2049
              }
            ],
            "name": "Jiffy-automate-saas-15-SG-apsoutheast1-EFS",
            "name_prefix": "",
            "owner_id": "339876445741",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:security-group/sg-0d9e0d211118716d2",
            "description": "Load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9e0d211118716d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Jiffy-automate-saas-15-SG-apsoutheast1-ALB",
            "name_prefix": "",
            "owner_id": "339876445741",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mlsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:security-group/sg-0bcb9a90e2ffd8c4e",
            "description": "ML-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bcb9a90e2ffd8c4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.15.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.15.0.0/16"
                ],
                "description": "",
                "from_port": 8765,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8765
              }
            ],
            "name": "Jiffy-automate-saas-15-SG-apsoutheast1-ML",
            "name_prefix": "",
            "owner_id": "339876445741",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:security-group/sg-0e959957627daf5f5",
            "description": "MongoDB-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e959957627daf5f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.15.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bcb9a90e2ffd8c4e",
                  "sg-0e77e308aa370945e"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "Jiffy-automate-saas-15-SG-apsoutheast1-Mongo",
            "name_prefix": "",
            "owner_id": "339876445741",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.core",
            "module.security_group.aws_security_group.lb",
            "module.security_group.aws_security_group.mlsg",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:security-group/sg-09edcc22afcad22fc",
            "description": "RDSSG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09edcc22afcad22fc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bcb9a90e2ffd8c4e",
                  "sg-0e77e308aa370945e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "Jiffy-automate-saas-15-SG-apsoutheast1-RDS",
            "name_prefix": "",
            "owner_id": "339876445741",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.core",
            "module.security_group.aws_security_group.lb",
            "module.security_group.aws_security_group.mlsg",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b2b0af2a3c542c76",
            "domain": "vpc",
            "id": "eipalloc-09bfb06de2e9e06b8",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-084b2083490a5088c",
            "private_dns": "ip-10-15-3-15.ap-southeast-1.compute.internal",
            "private_ip": "10.15.3.15",
            "public_dns": "ec2-54-179-28-254.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.28.254",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-EIP-apsoutheast1-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-EIP-apsoutheast1-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_route_table_association.RT-IG-Association",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a05e90b9d4ba0386",
            "domain": "vpc",
            "id": "eipalloc-0ef8d4af88655ddb7",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-069dd2b85a43ee731",
            "private_dns": "ip-10-15-4-254.ap-southeast-1.compute.internal",
            "private_ip": "10.15.4.254",
            "public_dns": "ec2-13-250-253-123.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.253.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-EIP-apsoutheast1-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-EIP-apsoutheast1-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_route_table_association.RT-IG-Association",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:internet-gateway/igw-0cfd401ef1eea05c1",
            "id": "igw-0cfd401ef1eea05c1",
            "owner_id": "339876445741",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-apsoutheast1-IGW",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-apsoutheast1-IGW",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bfb06de2e9e06b8",
            "connectivity_type": "public",
            "id": "nat-0b845c8c8502b7222",
            "network_interface_id": "eni-084b2083490a5088c",
            "private_ip": "10.15.3.15",
            "public_ip": "54.179.28.254",
            "subnet_id": "subnet-02383d91283267b9c",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-NAT-GW-apsoutheast1a-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-NAT-GW-apsoutheast1a-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            }
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_eip.Nat-Gateway-EIP",
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_route_table_association.RT-IG-Association",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef8d4af88655ddb7",
            "connectivity_type": "public",
            "id": "nat-0386ee92aa35e076f",
            "network_interface_id": "eni-069dd2b85a43ee731",
            "private_ip": "10.15.4.254",
            "public_ip": "13.250.253.123",
            "subnet_id": "subnet-0e7a95002ab708158",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-NAT-GW-apsoutheast1b-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-NAT-GW-apsoutheast1b-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            }
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_eip.Nat-Gateway-EIP",
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_route_table_association.RT-IG-Association",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:route-table/rtb-09ab78e7fb0bbe131",
            "id": "rtb-09ab78e7fb0bbe131",
            "owner_id": "339876445741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b845c8c8502b7222",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-NAT-GW-RT-apsoutheast1a-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-NAT-GW-RT-apsoutheast1a-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_Jiffy.aws_eip.Nat-Gateway-EIP",
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_nat_gateway.NAT_GATEWAY",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_route_table_association.RT-IG-Association",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:route-table/rtb-09800b941975fa68b",
            "id": "rtb-09800b941975fa68b",
            "owner_id": "339876445741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0386ee92aa35e076f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-NAT-GW-RT-apsoutheast1b-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-NAT-GW-RT-apsoutheast1b-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_Jiffy.aws_eip.Nat-Gateway-EIP",
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_nat_gateway.NAT_GATEWAY",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_route_table_association.RT-IG-Association",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:route-table/rtb-0fba8b2c9b29714a1",
            "id": "rtb-0fba8b2c9b29714a1",
            "owner_id": "339876445741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cfd401ef1eea05c1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-apsoutheast1-Public-Subnet-RT",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-apsoutheast1-Public-Subnet-RT",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0552aa3da6d8e022c",
            "route_table_id": "rtb-09ab78e7fb0bbe131",
            "subnet_id": "subnet-03edab75e14e97111"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_eip.Nat-Gateway-EIP",
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_nat_gateway.NAT_GATEWAY",
            "module.vpc_for_Jiffy.aws_route_table.NAT-Gateway-RT",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_route_table_association.RT-IG-Association",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d398abec064f56d2",
            "route_table_id": "rtb-09800b941975fa68b",
            "subnet_id": "subnet-098e283c2c70f1345"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_eip.Nat-Gateway-EIP",
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_nat_gateway.NAT_GATEWAY",
            "module.vpc_for_Jiffy.aws_route_table.NAT-Gateway-RT",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_route_table_association.RT-IG-Association",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc61fd857361e1ed",
            "route_table_id": "rtb-0fba8b2c9b29714a1",
            "subnet_id": "subnet-02383d91283267b9c"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0131fb05d0a240b1d",
            "route_table_id": "rtb-0fba8b2c9b29714a1",
            "subnet_id": "subnet-0e7a95002ab708158"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_internet_gateway.Internet_Gateway",
            "module.vpc_for_Jiffy.aws_route_table.Public-Subnet-RT",
            "module.vpc_for_Jiffy.aws_subnet.private_subnet",
            "module.vpc_for_Jiffy.aws_subnet.public_subnet",
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:subnet/subnet-03edab75e14e97111",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.15.1.0/24",
            "id": "subnet-03edab75e14e97111",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339876445741",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-subnet-apsoutheast1a-private-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-subnet-apsoutheast1a-private-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:subnet/subnet-098e283c2c70f1345",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.15.2.0/24",
            "id": "subnet-098e283c2c70f1345",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339876445741",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-subnet-apsoutheast1b-private-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-subnet-apsoutheast1b-private-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:subnet/subnet-02383d91283267b9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.15.3.0/24",
            "id": "subnet-02383d91283267b9c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339876445741",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-subnet-apsoutheast1a-public-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-subnet-apsoutheast1a-public-1",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:subnet/subnet-0e7a95002ab708158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.15.4.0/24",
            "id": "subnet-0e7a95002ab708158",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339876445741",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-subnet-apsoutheast1b-public-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-subnet-apsoutheast1b-public-2",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "vpc_id": "vpc-0350853148b01d3c1"
          },
          "dependencies": [
            "module.vpc_for_Jiffy.aws_vpc.custom_vpc",
            "module.vpc_for_Jiffy.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_for_Jiffy",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339876445741:vpc/vpc-0350853148b01d3c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/16",
            "default_network_acl_id": "acl-0b14082890ed5dbb8",
            "default_route_table_id": "rtb-09683adbf5d82f969",
            "default_security_group_id": "sg-080ca755dd28a91cf",
            "dhcp_options_id": "dopt-462e7c23",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0350853148b01d3c1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09683adbf5d82f969",
            "owner_id": "339876445741",
            "tags": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-apsoutheast1-vpc",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            },
            "tags_all": {
              "Contact": "Sekhar",
              "Department": "production",
              "Name": "Jiffy-automate-saas-15-apsoutheast1-vpc",
              "Product": "Jiffy-automate",
              "environment": "saas-15"
            }
          }
        }
      ]
    }
  ]
}